# MiloworksTV

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_keys.md  creating_a_show.md  manifest_schema.md  quickstart.md
examples/milo/: .env.example  README.md  characters.yaml  daily_writer.md  series_arc.md  style_bible.md
examples/milo/episodes/day-001-patience/: manifest.yaml
examples/milo/episodes/day-002-shadows/: manifest.yaml
examples/milo/episodes/ep00-the-landing/: README.md  characters.yaml  manifest.yaml  style_bible.md
examples/milo/music/: README.md
miloworks/: __init__.py  cli.py  config.py  fal_backend.py  ffmpeg_utils.py  init.py  manifest.py  publish.py  runner.py  server.py  wan_client.py  xai_client.py
miloworks/web/: index.html
miloworks/workflows/: wan22_flf2v.json  wan22_i2v.json
site/: README.md  index.html
